--- a/read_write/index.html
+++ b/read_write/index.html
@@ -13,7 +13,7 @@
 			<div class="title">
 				<h1>Gorilla Chat</h1>
 			</div>
-			<a href="#address-book-form">Go down</a>
+			<!--<a href="#address-book-form"></a>-->
 			<div id="messages">
 
 			</div>
@@ -23,17 +23,14 @@
 					<label for="fullname">name:</label><input type="text" id="fullname" name="fullname" maxlength="45" required/><br>
 					<label for="comment">comment:</label><textarea id="comment" name="comment" required></textarea><br>
 					<div class="buttons">
-						<button id="OK" type="submit">Submit</button>
+						<button id="OK" type="submit">send</button>
 						<!-- <button id="Cancel" type="reset">Reset</button> -->
 					</div>
 				</div>
 			</form>
 			</div>
 
-		</div>	
 	</body>
 
-	<div class="footer">
-			<p>Contact information:	<a href="mailto:marat.petrosov@gmail.com?Subject=Hello" target="_top">admin</a></p>
-		  </div>
+
 </html>
